--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,8 @@
 platform = espressif32
 board = esp32s3box
 framework = arduino
+upload_speed = 115200
+upload_port = /dev/ttyACM0
 lib_deps = 
 	moononournation/GFX Library for Arduino@^1.6.0
-	; adafruit/Adafruit ImageReader Library@^2.9.3
-	; bodmer/JPEGDecoder@^2.0.0
-	; lvgl/lvgl@^9.3.0
+	paulstoffregen/Time@^1.6.1
