--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,7 @@ board = esp32s3box
 framework = arduino
 upload_speed = 115200
 upload_port = /dev/ttyACM0
+build_flags = -fpermissive
 lib_deps = 
 	moononournation/GFX Library for Arduino@^1.6.0
 	paulstoffregen/Time@^1.6.1
