--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,8 @@ board = esp32s3box
 framework = arduino
 upload_speed = 115200
 upload_port = /dev/ttyACM0
-build_flags = -fpermissive
+board_build.partitions = huge_app.csv
 lib_deps = 
 	moononournation/GFX Library for Arduino@^1.6.0
 	paulstoffregen/Time@^1.6.1
+	t-vk/ESP32 BLE Keyboard@^0.3.2
