--- a/platformio.ini
+++ b/platformio.ini
@@ -15,7 +15,8 @@ framework = arduino
 upload_speed = 115200
 upload_port = /dev/ttyACM0
 board_build.partitions = huge_app.csv
+monitor_speed = 115200
 lib_deps = 
 	moononournation/GFX Library for Arduino@^1.6.0
 	paulstoffregen/Time@^1.6.1
-	; t-vk/ESP32 BLE Keyboard@^0.3.2
+	t-vk/ESP32 BLE Keyboard@^0.3.2
