Desactivation de la SD quand non necessaire

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,4 +19,4 @@ monitor_speed = 115200
 lib_deps = 
 	moononournation/GFX Library for Arduino@^1.6.0
 	paulstoffregen/Time@^1.6.1
-	t-vk/ESP32 BLE Keyboard@^0.3.2
+	; t-vk/ESP32 BLE Keyboard@^0.3.2
