--- a/platformio.ini
+++ b/platformio.ini
@@ -18,5 +18,5 @@ board_build.partitions = huge_app.csv
 monitor_speed = 115200
 lib_deps = 
 	moononournation/GFX Library for Arduino@^1.6.0
-	paulstoffregen/Time@^1.6.1
-	; t-vk/ESP32 BLE Keyboard@^0.3.2
+	arduino-libraries/NTPClient@^3.2.1
+	jchristensen/Timezone@^1.2.5
