--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,15 @@ upload_speed = 115200
 upload_port = /dev/ttyACM0
 board_build.partitions = huge_app.csv
 monitor_speed = 115200
+; build_flags = 
+;     -DARDUINO_USB_MODE=1      # Activer USB en mode périphérique
+;     -DARDUINO_USB_CDC_ON_BOOT=0  # Désactiver le port série USB
+; 	-DBOARD_HAS_PSRAM
+; 	-DCONFIG_TINYUSB_HID_ENABLED=1
+; 	-DUSB_MANUFACTURER="Shionn"
+; 	-DUSB_PRODUCT="ESP32S3 Launchers"
 lib_deps = 
-	moononournation/GFX Library for Arduino@^1.6.0
-	arduino-libraries/NTPClient@^3.2.1
-	jchristensen/Timezone@^1.2.5
+	moononournation/GFX Library for Arduino
+	arduino-libraries/NTPClient
+	jchristensen/Timezone
+	; adafruit/Adafruit TinyUSB Library
